welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: not found: value baisserbrosse
baisserbrosse()
^Source:22: error: not found: value leverbrosse
leverbrosse()
^